--- a/Lecture-23/RESTful/package.json
+++ b/Lecture-23/RESTful/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-      "start": "nodemon ./index.js"
+    "start": "nodemon ./index.js"
   },
   "keywords": [],
   "author": "",
@@ -12,6 +12,8 @@
   "dependencies": {
     "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "nodemon": "^2.0.14"
+    "method-override": "^3.0.0",
+    "nodemon": "^2.0.14",
+    "uuid": "^8.3.2"
   }
 }
