--- a/Lecture-27/MongooseWithExpress/package.json
+++ b/Lecture-27/MongooseWithExpress/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-      "start":"nodemon ./index.js"
+    "start": "nodemon ./index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "method-override": "^3.0.0",
     "mongoose": "^6.0.12",
     "nodemon": "^2.0.14"
   }
