--- a/Lecture-44/quotes-app/backend/package.json
+++ b/Lecture-44/quotes-app/backend/package.json
@@ -9,6 +9,7 @@
   "author": "Sabeel Khan",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.2",
     "mongoose": "^6.1.3"
   }
